[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agibuilder"
version = "0.1.0"
description = "Dockerfile generator for AGI -- nothing more, nothing less."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research","Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

]
dependencies = [
    "jinja2",
    "pydantic",
    "typer"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest"
]

[project.urls]
"Documentation" = "https://spillai.github.io/agibuiler/"
"Source Code" = "https://github.com/spillai/agibuilder"
"Homepage" = "https://spillai.github.io/agibuiler/"

[project.scripts]
agibuilder = "agibuilder.cli:app"

[tool.setuptools.packages.find]
include = ["agibuilder*","scripts*"]
exclude = [
    "build",
    "conda",
    "dist",
    "docs",
    "requirements",
    "tests",
]


[tool.setuptools.package-data]
"*" = ["*.jinja2", "test_data/*.*"]

[tool.black]
line-length = 119
target-version = ['py38']
exclude = '''
    /(
        \.eggs
      | \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
'''
[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # E501: Line too long
    "C901",  # C901: Function is too complex
    "B008",  # do not perform function calls in argument defaults
    "B904",  # B904: check for raise from None
]
line-length = 119
target-version = "py38"
