[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agi-pack"
description = "Dockerfile generator for AGI -- nothing more, nothing less."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research","Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

]
dynamic = ["version"]
dependencies = [
    "jinja2",
    "pydantic>=2",
    "pyyaml",
    "typer[all]"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "build",
]

[project.urls]
"Documentation" = "https://spillai.github.io/agi-pack/"
"Source Code" = "https://github.com/spillai/agi-pack"
"Homepage" = "https://spillai.github.io/agi-pack/"

[tool.setuptools.dynamic]
version = {attr = "agipack.version.__version__"}

[project.scripts]
agi-pack = "agipack.cli:app"

[tool.setuptools.packages.find]
include = ["agipack*"]
exclude = [
    "build",
    "dist",
    "docs",
    "tests",
]

[pytest]
log_cli = true
log_cli_level = "INFO"

[tool.setuptools.package-data]
"*" = ["*.j2", "*.yaml"]

[tool.black]
line-length = 119
target-version = ['py38']
exclude = '''
    /(
        \.eggs
      | \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
'''
[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # E501: Line too long
    "C901",  # C901: Function is too complex
    "B008",  # do not perform function calls in argument defaults
    "B904",  # B904: check for raise from None
]
line-length = 119
target-version = "py38"

[tool.pytest.ini_options]
addopts = "-sv -m 'not (skip) and not (docker)'"
markers = [
    "docker",   # Tests that require docker and docker builds
]
